--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./public/css/styles.css" rel= "stylesheet" />
+    <link href="./public/css/styles.css" rel="stylesheet" />
     <title>Sibusiso Digital CV</title>
   </head>
-  <body>Start to great stuff!!!
-    <br>
-
+  <body>
+    Start to great stuff!!!
+    <br />
   </body>
-  <script src="./index.html"></script>
-
+  <script src="../express.js"></script>
 </html>
