remove server from index html

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./public/css/styles.css" rel="stylesheet" />
+    <link href="./css/styles.css" rel="stylesheet" />
     <title>Sibusiso Digital CV</title>
   </head>
   <body>
-    Start to great stuff!!!
+    <section id="digital-cv-body">
+      <nav id="digital-cv-nav">
+
+        <section id="hamburger-section">
+          <h2 id="hamburger-section-header"><a href="/">Sibusiso Mdlovu</a></h2>
+
+          <form id="hamburger-form">
+            <button type="button" id="hamburger-bar">
+              <img alt="hamburger-bar" src="./assets/icons/hamburger-bar.png" />
+            </button>
+
+            <button type="button" id="hamburger-bar-cross">
+              <img
+                alt="hamburger-bar-cross"
+                src="./assets/icons/hamburger-bar-cross.png"
+              />
+            </button>
+          </form>
+          
+        </section>
+
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+
+      <section id="digital-cv-">Name and section</section>
+    </section>
     <br />
   </body>
-  <script src="../express.js"></script>
+  <script type="text/javascript" src="/static/js/index.js"></script>
+  <!-- Don't include server on client -->
+  <!-- <script type="text/javascript" src="/express.js"></script> -->
 </html>
