styles fro menu

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
   <body>
     <section id="digital-cv-body">
       <nav id="digital-cv-nav">
-
         <section id="hamburger-section">
           <h2 id="hamburger-section-header"><a href="/">Sibusiso Mdlovu</a></h2>
 
@@ -25,17 +24,19 @@
               />
             </button>
           </form>
-          
         </section>
 
-        <ul>
+        <ul id="nav-menu">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
 
-      <section id="digital-cv-">Name and section</section>
+      <section class="digital-cv-section">About Me Name and section</section>
+      <section class="digital-cv-section">Skills</section>
+      <section class="digital-cv-section">hobbies</section>
+      <section class="digital-cv-section">contact me</section>
     </section>
     <br />
   </body>
