--- a/public/index.html
+++ b/public/index.html
@@ -90,12 +90,13 @@
             name="message"
             rows="5"
             cols="30"
-            placeholder="Please write your message here."
+            placeholder="Please write your message here. (optional)"
             maxlength="256"
             title="Message: May not be empty, and can not exceed 256 characters."
           ></textarea
           ><br />
           <input type="submit" value="Submit" />
+          <input type="button" value="Clear Fields" />
         </form>
       </section>
     </main>
