correct form end pont action

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
           </ul>
         </section>
 
-        <form id="contact-me-form" method="POST" action="/new_visit_post">
+        <form id="contact-me-form" method="POST" action="/digital-cv/new_visitor_post">
           <!-- apply regex validation -->
 
           <label for="firstName">First Name:</label>
