--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,6 @@
         </section>
 
         <form id="contact-me-form" method="POST" action="/digital-cv/new_visitor_post">
-          <!-- apply regex validation -->
-
           <label for="firstName">First Name:</label>
           <input
             pattern="[a-zA-Z]{2,256}$"
@@ -77,7 +75,7 @@
           /><br />
           <label for="email">Email:</label>
           <input
-            pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"
+            pattern="[A-Za-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"
             title="Email: Must be in the following order: 'characters@characters.domain'"
             type="email"
             id="email"
@@ -102,5 +100,6 @@
     </main>
   </body>
 
-  <script type="text/javascript" src="/static/js/index.js"></script>
+  <script src="/static/js/index.js"></script>
+  <script src="/static/js/new-visitor.js"></script>
 </html>
