remove unused scriot

--- a/public/index.html
+++ b/public/index.html
@@ -93,13 +93,12 @@
             title="Message: May not be empty, and can not exceed 256 characters."
           ></textarea
           ><br />
-          <input type="submit" value="Submit" />
-          <input type="button" value="Clear Fields" />
+          <input type="submit" value="Submit" id="visitorSubmitButton"/>
+          <input type="button" value="Clear Fields"  id="visitorClearFieldsButton" />
         </form>
       </section>
     </main>
   </body>
 
   <script src="/static/js/index.js"></script>
-  <script src="/static/js/new-visitor.js"></script>
 </html>
