most uptodate working version

--- a/public/index.html
+++ b/public/index.html
@@ -73,13 +73,13 @@
             required
             placeholder="Enter Your Last Name"
           /><br />
-          <label for="email">Email:</label>
+          <label for="emailAddress">Email:</label>
           <input
             pattern="[A-Za-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"
             title="Email: Must be in the following order: 'characters@characters.domain'"
             type="email"
-            id="email"
-            name="email"
+            id="emailAddress"
+            name="emailAddress"
             required
             placeholder="Enter Your Email Address"
           /><br />
