limit email lengths

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
           /><br />
           <label for="emailAddress">Email:</label>
           <input
-            pattern="[A-Za-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"
+            pattern="[A-Za-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,320}$"
             title="Email: Must be in the following order: 'characters@characters.domain'"
             type="email"
             id="emailAddress"
