--- a/public/index.html
+++ b/public/index.html
@@ -132,18 +132,33 @@
         <section id="hobbies-information">
           <section class="hobby-information-block">
             <h4>Skipping</h4>
-
+            <img
+              alt="skipping-icon"
+              src="/public/assets/icons/skip-rope.png"
+              id="skipping-icon"
+              class="hobby-icon"
+            />
           </section>
 
           <section class="hobby-information-block">
             <h4>Home Workouts</h4>
+            <img
+            alt="home-workout-icon"
+            src="/public/assets/icons/workout.png"
+            id="home-workout-icon"
+            class="hobby-icon"
+          />
           </section>
 
           <section class="hobby-information-block">
             <h4>Walking</h4>
+            <img
+            alt="walking-icon"
+            src="/public/assets/icons/walking.png"
+            id="walking-icon"
+            class="hobby-icon"
+          />
           </section>
-
-          
         </section>
       </section>
       <section
