--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
         <h2>
           <img
             alt="moustache-man-icon"
-            src="/public/assets/icons/moustache-man-icon.png"
+            src="/public/assets/icons/pencil.png"
             id="skills-icon"
             class="section-icons"
           />
@@ -123,7 +123,7 @@
         <h2>
           <img
             alt="moustache-man-icon"
-            src="/public/assets/icons/moustache-man-icon.png"
+            src="/public/assets/icons/hobbies.png"
             id="hobbies-icon"
             class="section-icons"
           />
@@ -167,9 +167,9 @@
       >
         <h2>
           <img
-            alt="moustache-man-icon"
-            src="/public/assets/icons/moustache-man-icon.png"
-            id="experience"
+            alt="qualification-icon"
+            src="/public/assets/icons/qualification.png"
+            id="qualifications-icon"
             class="section-icons"
           />
           Qualifications
@@ -179,7 +179,7 @@
         <h2>
           <img
             alt="moustache-man-icon"
-            src="/public/assets/icons/moustache-man-icon.png"
+            src="/public/assets/icons/portfolio.png"
             id="experience"
             class="section-icons"
           />
@@ -190,7 +190,7 @@
         <h2 class="section-heading">
           <img
             alt="moustache-man-icon"
-            src="/public/assets/icons/moustache-man-icon.png"
+            src="/public/assets/icons/chat.png"
             id="contact-me-icon"
             class="section-icons"
           />
