--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,15 @@
           I believe technology should be used to improve the quality of all
           life, and I look forward to playing a role in doing so.
         </p>
+
+        <p>
+          Having been exposed to and experimented with a range of technologies,
+          I can proudly say I've found the path I'm passionate about, in Web
+          Development. I mostly enjoy the logical challenge that comes with
+          backend development. I enjoy new experiences, socializing and learning
+          about the world and myself, as I believe this is one of the keys to
+          discovering creative and meaningful ideas.
+        </p>
       </section>
       <section id="digital-cv-section-skills" class="digital-cv-section">
         <h2>
@@ -143,21 +152,21 @@
           <section class="hobby-information-block">
             <h4>Home Workouts</h4>
             <img
-            alt="home-workout-icon"
-            src="/public/assets/icons/workout.png"
-            id="home-workout-icon"
-            class="hobby-icon"
-          />
+              alt="home-workout-icon"
+              src="/public/assets/icons/workout.png"
+              id="home-workout-icon"
+              class="hobby-icon"
+            />
           </section>
 
           <section class="hobby-information-block">
             <h4>Walking</h4>
             <img
-            alt="walking-icon"
-            src="/public/assets/icons/walking.png"
-            id="walking-icon"
-            class="hobby-icon"
-          />
+              alt="walking-icon"
+              src="/public/assets/icons/walking.png"
+              id="walking-icon"
+              class="hobby-icon"
+            />
           </section>
         </section>
       </section>
@@ -174,6 +183,23 @@
           />
           Qualifications
         </h2>
+
+        <ul>
+          <li>
+            <section>
+              <h3>Secondary Education</h3>
+              <h4>School : Hoërskool Uitsig, Centurion, Gautain</h4>
+            </section>
+          </li>
+
+          <li>
+            <section>
+              <h3>Higher Education</h3>
+              <h4>School : Umuzi Academy, Centurion, Gautain</h4>
+              <h4>Apr 2022 - Present</h4>
+            </section>
+          </li>
+        </ul>
       </section>
       <section id="digital-cv-section-experience" class="digital-cv-section">
         <h2>
