--- a/public/index.html
+++ b/public/index.html
@@ -184,34 +184,28 @@
           Qualifications
         </h2>
 
-        <ul>
+        <ul id="qulification-list">
           <li>
             <section>
               <h3>Secondary Education</h3>
-              <h4>School : Hoërskool Uitsig, Centurion, Gautain</h4>
+              <section>
+                <h4>School : Hoërskool Uitsig, Centurion, Gautain</h4>
+              </section>
             </section>
           </li>
 
           <li>
             <section>
               <h3>Higher Education</h3>
-              <h4>School : Umuzi Academy, Centurion, Gautain</h4>
-              <h4>Apr 2022 - Present</h4>
+              <section>
+                <h4>Academy : Umuzi Academy, South Africa</h4>
+              </section>
+              <h5><span>Apr 2022 - Present</span></h5>
             </section>
           </li>
         </ul>
       </section>
-      <section id="digital-cv-section-experience" class="digital-cv-section">
-        <h2>
-          <img
-            alt="moustache-man-icon"
-            src="/public/assets/icons/portfolio.png"
-            id="experience"
-            class="section-icons"
-          />
-          Experience
-        </h2>
-      </section>
+
       <section id="digital-cv-section-contact-me" class="digital-cv-section">
         <h2 class="section-heading">
           <img
@@ -222,7 +216,6 @@
           />
           Contact Me
         </h2>
-
         <section
           id="digital-cv-section-socials"
           class="digital-cv-contact-section"
