--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,12 @@
         <li><a href="#digital-cv-section-about-me">About</a></li>
         <li><a href="#digital-cv-section-skills">Skills</a></li>
         <li><a href="#digital-cv-section-hobbies">Hobbies</a></li>
-        <li><a href="#digital-cv-section-experience">Experience</a></li>
         <li>
           <a href="#digital-cv-section-qualifications">Qualifications</a>
         </li>
         <li><a href="#digital-cv-section-contact-me">Contact me</a></li>
         <li><a href="assets/Sibusiso_M_Mdlovu_CV.pdf">Download CV</a></li>
+        <li><a href="#digital-cv-section-admin">Admin</a></li>
       </ul>
     </nav>
     <main id="digital-cv-body">
@@ -56,25 +56,15 @@
         </h2>
 
         <p>
-          Hi 👋🏾 it's nice to meet you, I'm Sibusiso, A Full Stack Web Developer
-          From 📍 Pretoria, South Africa.
+          Hi there, 👋🏾 it's nice to meet you, I'm <strong>Sibusiso</strong>, A
+          Full Stack Web Developer From 📍 Pretoria, South Africa.
         </p>
-
         <p>
           I am a passionate Full-Stack Developer (Mobile and Web Applications),
           but more importantly, I'm passionate about Innovation and technology.
           <br />
           I believe technology should be used to improve the quality of all
-          life, and I look forward to playing a role in doing so.
-        </p>
-
-        <p>
-          Having been exposed to and experimented with a range of technologies,
-          I can proudly say I've found the path I'm passionate about, in Web
-          Development. I mostly enjoy the logical challenge that comes with
-          backend development. I enjoy new experiences, socializing and learning
-          about the world and myself, as I believe this is one of the keys to
-          discovering creative and meaningful ideas.
+          life, and I look forward to playing a role in doing so. 🌱💻
         </p>
       </section>
       <section id="digital-cv-section-skills" class="digital-cv-section">
