--- a/public/index.html
+++ b/public/index.html
@@ -199,28 +199,62 @@
       <section id="digital-cv-section-contact-me" class="digital-cv-section">
         <h2 class="section-heading">
           <img
-            alt="moustache-man-icon"
+            alt="contact-me-icon"
             src="/public/assets/icons/chat.png"
             id="contact-me-icon"
             class="section-icons"
           />
           Contact Me
         </h2>
+
         <section
           id="digital-cv-section-socials"
           class="digital-cv-contact-section"
         >
           <ul>
-            <li><address>Address</address></li>
-            <li><Email>email icon</Email></li>
-            <li>Socials :</li>
+            <li>
+              <article>
+                <h2>Address</h2>
+                <p>Gauteng, South Africa</p>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h2>Email</h2>
+                <p>
+                  <a href="mailto:sibu.mdlovu@gmail.com"
+                    >sibu.mdlovu@gmail.com</a
+                  >
+                </p>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h2>Social</h2>
+                <ul class="social-icons">
+                  <li>
+                    <a
+                      href="https://github.com/Sibusiso-M"
+                      target="_blank"
+                      class="social-link-icons"
+                      aria-label="GitHub"
+                    >Github</a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/in/sibusiso-mdlovu/"
+                      target="_blank"
+                      class="social-link-icons"
+                      aria-label="LinkedIn"
+                    >Linked In</a>
+                  </li>
+                </ul>
+              </article>
+            </li>
           </ul>
         </section>
 
-        <section id="info-processing-section">Info processing section</section>
         <section id="form-section">
-          <h2 id="processing-info">Processing...</h2>
-          <h2 id="success-message">Form submitted successfully!</h2>
           <form id="contact-me-form" action="/new_visitor_post" method="POST">
             <label for="firstName">First Name:</label>
             <input
