move index to root

--- a/index.html
+++ b/index.html
@@ -314,5 +314,5 @@
     </main>
   </body>
   <script src="./jquery-3.6.3.min.js"></script>
-  <script src="/js/index.js"></script>
+  <script src="/src/js/index.js"></script>
 </html>
