improve css with color scheme

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         </h2>
 
         <p>
-          Hi there, 👋🏾 it's nice to meet you, I'm <strong>Sibusiso</strong>, A
-          Full Stack Web Developer From 📍 Pretoria, South Africa.
+          Hi there, 👋🏾 it's nice to meet you, I'm <strong>Sibusiso, A
+          Full Stack Web Developer</strong> From 📍 Pretoria, South Africa.
         </p>
         <p>
           I am a passionate Full-Stack Developer (Mobile and Web Applications),
@@ -313,5 +313,6 @@
       </section>
     </main>
   </body>
+  <script src="./jquery-3.6.3.min.js"></script>
   <script src="/src/js/index.js"></script>
 </html>
