--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
         </h2>
 
         <p>
-          Hi there, 👋🏾 it's nice to meet you, I'm <strong>Sibusiso, A
-          Full Stack Web Developer</strong> From 📍 Pretoria, South Africa.
+          Hi there, 👋🏾 it's nice to meet you, I'm
+          <strong>Sibusiso, A Full Stack Web Developer</strong> From 📍
+          Pretoria, South Africa.
         </p>
         <p>
           I am a passionate Full-Stack Developer (Mobile and Web Applications),
@@ -174,23 +175,25 @@
           Qualifications
         </h2>
 
-        <ul id="qulification-list">
+        <ul id="qualifications-list">
           <li>
-            <section>
+            <section class="education-section">
               <h3>Secondary Education</h3>
-              <section>
-                <h4>School : Hoërskool Uitsig, Centurion, Gautain</h4>
+              <section class="institution">
+                <h4>School:</h4>
+                <p>Hoërskool Uitsig, Centurion, Gautain</p>
               </section>
             </section>
           </li>
 
           <li>
-            <section>
+            <section class="education-section">
               <h3>Higher Education</h3>
-              <section>
-                <h4>Academy : Umuzi Academy, South Africa</h4>
+              <section class="institution">
+                <h4>Academy:</h4>
+                <p>Umuzi Academy, South Africa</p>
               </section>
-              <h5><span>Apr 2022 - Present</span></h5>
+              <h4><span class="duration">Apr 2022 - Apr 2023</span></h4>
             </section>
           </li>
         </ul>
@@ -238,7 +241,8 @@
                       target="_blank"
                       class="social-link-icons"
                       aria-label="GitHub"
-                    >Github</a>
+                      >Github</a
+                    >
                   </li>
                   <li>
                     <a
@@ -246,7 +250,8 @@
                       target="_blank"
                       class="social-link-icons"
                       aria-label="LinkedIn"
-                    >Linked In</a>
+                      >Linked In</a
+                    >
                   </li>
                 </ul>
               </article>
