--- a/index.html
+++ b/index.html
@@ -209,57 +209,52 @@
           />
           Contact Me
         </h2>
+        <section id="digital-cv-section-socials" class="digital-cv-section">
+          <article>
+            <h3 class="social-contact">Address</h3>
+            <p>Gauteng, South Africa</p>
+          </article>
 
-        <section
-          id="digital-cv-section-socials"
-          class="digital-cv-contact-section"
-        >
-          <ul>
+          <article>
+            <h3 class="social-contact">Email</h3>
+            <p>
+              <a href="mailto:sibu.mdlovu@gmail.com">sibu.mdlovu@gmail.com</a>
+            </p>
+          </article>
+
+          <article>
+            <h3 class="social-contact">Social</h3>
+          </article>
+
+          <ul class="social-icons">
             <li>
-              <article>
-                <h2>Address</h2>
-                <p>Gauteng, South Africa</p>
-              </article>
+              <a
+                href="https://github.com/Sibusiso-M"
+                target="_blank"
+                rel="noopener"
+                class="social-link-icons"
+                aria-label="GitHub"
+                >Github</a
+              >
             </li>
             <li>
-              <article>
-                <h2>Email</h2>
-                <p>
-                  <a href="mailto:sibu.mdlovu@gmail.com"
-                    >sibu.mdlovu@gmail.com</a
-                  >
-                </p>
-              </article>
-            </li>
-            <li>
-              <article>
-                <h2>Social</h2>
-                <ul class="social-icons">
-                  <li>
-                    <a
-                      href="https://github.com/Sibusiso-M"
-                      target="_blank"
-                      class="social-link-icons"
-                      aria-label="GitHub"
-                      >Github</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      href="https://www.linkedin.com/in/sibusiso-mdlovu/"
-                      target="_blank"
-                      class="social-link-icons"
-                      aria-label="LinkedIn"
-                      >Linked In</a
-                    >
-                  </li>
-                </ul>
-              </article>
+              <a
+                href="https://www.linkedin.com/in/sibusiso-mdlovu/"
+                target="_blank"
+                rel="noopener"
+                class="social-link-icons"
+                aria-label="LinkedIn"
+                >LinkedIn</a
+              >
             </li>
           </ul>
         </section>
 
-        <section id="form-section">
+        <section
+          id="form-section"
+          id="digital-cv-contact-section"
+          class="digital-cv-section"
+        >
           <form id="contact-me-form" action="/new_visitor_post" method="POST">
             <label for="firstName">First Name:</label>
             <input
