add icons and styles

--- a/index.html
+++ b/index.html
@@ -225,7 +225,6 @@
           <article>
             <h3 class="social-contact">Social</h3>
           </article>
-
           <ul class="social-icons">
             <li>
               <a
@@ -234,8 +233,9 @@
                 rel="noopener"
                 class="social-link-icons"
                 aria-label="GitHub"
-                >Github</a
               >
+                <img src="public/assets/icons/github-mobile-icon.png" alt="GitHub" class="social-link-icon-image" /> GitHub
+              </a>
             </li>
             <li>
               <a
@@ -244,8 +244,9 @@
                 rel="noopener"
                 class="social-link-icons"
                 aria-label="LinkedIn"
-                >LinkedIn</a
               >
+              <img src="public/assets/icons/linkedin-icon-mobile.png" alt="LinkedIn" class="social-link-icon-image" id="linkedIn-icon"> LinkedIn
+              </a>
             </li>
           </ul>
         </section>
