--- a/index.html
+++ b/index.html
@@ -209,6 +209,68 @@
           />
           Contact Me
         </h2>
+        <section
+          id="form-section"
+          id="digital-cv-contact-section"
+          class="digital-cv-section"
+        >
+          <form id="contact-me-form" action="/new_visitor_post" method="POST">
+            <label for="firstName" id="contact-me-form-first-name-label"
+              >First Name</label
+            >
+            <input
+              pattern="[a-zA-Z]{2,256}$"
+              title="FirstName: Must be filled, only one name allowed."
+              type="text"
+              id="firstName"
+              name="firstName"
+              required
+              placeholder="Enter Your Name"
+            />
+            <label for="lastName">Last Name</label>
+            <input
+              pattern="[a-zA-Z]{2,256}$"
+              title="Last Name: Must be filled, only one surname allowed."
+              type="text"
+              id="lastName"
+              name="lastName"
+              required
+              placeholder="Enter Your Last Name"
+            />
+            <label for="emailAddress">Email</label>
+            <input
+              pattern="[A-Za-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,320}$"
+              title="Email: Must be in the following order: 'characters@characters.domain'"
+              type="email"
+              id="emailAddress"
+              name="emailAddress"
+              required
+              placeholder="Enter Your Email Address"
+            />
+            <label for="message">Message</label>
+            <textarea
+              name="message"
+              rows="5"
+              cols="30"
+              placeholder="Please write your message here. (optional)"
+              maxlength="256"
+              title="Message: May not be empty, and can not exceed 256 characters."
+            ></textarea>
+            <input
+              type="submit"
+              id="visitorSubmitButton"
+              value="Submit"
+              class="buttons"
+            />
+            <input
+              type="button"
+              value="Clear Fields"
+              id="visitorClearFieldsButton"
+              class="buttons"
+            />
+          </form>
+        </section>
+
         <section id="digital-cv-section-socials" class="digital-cv-section">
           <article>
             <h3 class="social-contact">Address</h3>
@@ -260,71 +322,6 @@
               </a>
             </li>
           </ul>
-        </section>
-
-        <section
-          id="form-section"
-          id="digital-cv-contact-section"
-          class="digital-cv-section"
-        >
-          <section id="form-header">
-            <h2>Please Fill In your details so I may get in touch with you.</h2>
-          </section>
-
-          <form id="contact-me-form" action="/new_visitor_post" method="POST">
-            <label for="firstName" id="contact-me-form-first-name-label">First Name</label>
-            <input
-              pattern="[a-zA-Z]{2,256}$"
-              title="FirstName: Must be filled, only one name allowed."
-              type="text"
-              id="firstName"
-              name="firstName"
-              required
-              placeholder="Enter Your Name"
-            />
-            <label for="lastName">Last Name</label>
-            <input
-              pattern="[a-zA-Z]{2,256}$"
-              title="Last Name: Must be filled, only one surname allowed."
-              type="text"
-              id="lastName"
-              name="lastName"
-              required
-              placeholder="Enter Your Last Name"
-            />
-            <label for="emailAddress">Email</label>
-            <input
-              pattern="[A-Za-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,320}$"
-              title="Email: Must be in the following order: 'characters@characters.domain'"
-              type="email"
-              id="emailAddress"
-              name="emailAddress"
-              required
-              placeholder="Enter Your Email Address"
-            />
-            <label for="message">Message</label>
-            <textarea
-              name="message"
-              rows="5"
-              cols="30"
-              placeholder="Please write your message here. (optional)"
-              maxlength="256"
-              title="Message: May not be empty, and can not exceed 256 characters."
-            ></textarea
-            >
-            <input
-              type="submit"
-              id="visitorSubmitButton"
-              value="Submit"
-              class="buttons"
-            />
-            <input
-              type="button"
-              value="Clear Fields"
-              id="visitorClearFieldsButton"
-              class="buttons"
-            />
-          </form>
         </section>
       </section>
     </main>
