--- a/index.html
+++ b/index.html
@@ -54,19 +54,21 @@
           />
           About Me
         </h2>
-
-        <p>
-          Hi there, 👋🏾 it's nice to meet you, I'm
-          <strong>Sibusiso, A Full Stack Web Developer</strong> From 📍
-          Pretoria, South Africa.
-        </p>
-        <p>
-          I am a passionate Full-Stack Developer (Mobile and Web Applications),
-          but more importantly, I'm passionate about Innovation and technology.
-          <br />
-          I believe technology should be used to improve the quality of all
-          life, and I look forward to playing a role in doing so. 🌱💻
-        </p>
+        <section id="about-me-text">
+          <p>
+            Hi there, 👋🏾 it's nice to meet you, I'm
+            <strong>Sibusiso, A Full Stack Web Developer</strong> From 📍
+            Pretoria, South Africa.
+          </p>
+          <p>
+            I am a passionate Full-Stack Developer (Mobile and Web
+            Applications), but more importantly, I'm passionate about Innovation
+            and technology.
+            <br />
+            I believe technology should be used to improve the quality of all
+            life, and I look forward to playing a role in doing so. 🌱💻
+          </p>
+        </section>
       </section>
       <section id="digital-cv-section-skills" class="digital-cv-section">
         <h2>
