--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
               placeholder="Please write your message here. (optional)"
               maxlength="256"
               title="Message: May not be empty, and can not exceed 256 characters."
+              id="messageArea"
             ></textarea>
             <input
               type="submit"
