--- a/index.html
+++ b/index.html
@@ -331,6 +331,6 @@
       </section>
     </main>
   </body>
-  <script src="./jquery-3.6.3.min.js"></script>
+  <!-- <script src="./jquery-3.6.3.min.js"></script> -->
   <script src="/index.js"></script>
 </html>
