remove jquery line

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <link rel="shortcut icon" href="">
-
+    <link rel="shortcut icon" href="" />
 
     <title>Sibusiso Digital CV</title>
   </head>
@@ -331,6 +330,5 @@
       </section>
     </main>
   </body>
-  <!-- <script src="./jquery-3.6.3.min.js"></script> -->
   <script src="/index.js"></script>
 </html>
