--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h2>
           <img
             alt="moustache-man-icon"
-            src="/public/assets/icons/moustache-man-icon.png"
+            src="/assets/icons/moustache-man-icon.png"
             id="about-me-icon"
             class="section-icons"
           />
@@ -74,7 +74,7 @@
         <h2>
           <img
             alt="moustache-man-icon"
-            src="/public/assets/icons/pencil.png"
+            src="/assets/icons/pencil.png"
             id="skills-icon"
             class="section-icons"
           />
