--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <h2>
           <img
             alt="moustache-man-icon"
-            src="/public/assets/icons/hobbies.png"
+            src="/assets/icons/hobbies.png"
             id="hobbies-icon"
             class="section-icons"
           />
@@ -136,7 +136,7 @@
             <h4>Skipping</h4>
             <img
               alt="skipping-icon"
-              src="/public/assets/icons/skip-rope.png"
+              src="/assets/icons/skip-rope.png"
               id="skipping-icon"
               class="hobby-icon"
             />
@@ -146,7 +146,7 @@
             <h4>Home Workouts</h4>
             <img
               alt="home-workout-icon"
-              src="/public/assets/icons/workout.png"
+              src="/assets/icons/workout.png"
               id="home-workout-icon"
               class="hobby-icon"
             />
@@ -156,7 +156,7 @@
             <h4>Walking</h4>
             <img
               alt="walking-icon"
-              src="/public/assets/icons/walking.png"
+              src="/assets/icons/walking.png"
               id="walking-icon"
               class="hobby-icon"
             />
@@ -170,7 +170,7 @@
         <h2>
           <img
             alt="qualification-icon"
-            src="/public/assets/icons/qualification.png"
+            src="/assets/icons/qualification.png"
             id="qualifications-icon"
             class="section-icons"
           />
@@ -205,7 +205,7 @@
         <h2 class="section-heading">
           <img
             alt="contact-me-icon"
-            src="/public/assets/icons/chat.png"
+            src="/assets/icons/chat.png"
             id="contact-me-icon"
             class="section-icons"
           />
