remove public folder

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./public/css/styles.css" rel="stylesheet" />
+    <link href="/css/styles.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -301,7 +301,7 @@
                 aria-label="GitHub"
               >
                 <img
-                  src="public/assets/icons/github-mobile-icon.png"
+                  src="/assets/icons/github-mobile-icon.png"
                   alt="GitHub"
                   class="social-link-icon-image"
                 />
@@ -317,7 +317,7 @@
                 aria-label="LinkedIn"
               >
                 <img
-                  src="public/assets/icons/linkedin-icon-mobile.png"
+                  src="/assets/icons/linkedin-icon-mobile.png"
                   alt="LinkedIn"
                   class="social-link-icon-image"
                   id="linkedIn-icon"
