--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           id="digital-cv-contact-section"
           class="digital-cv-section"
         >
-          <form id="contact-me-form" action="https://sibusiso-mdlovu.onrender.com/submit" method="POST">
+          <form id="contact-me-form" action="/submit" method="POST">
             <section id="successMessage"></section>
             <label for="firstName" id="contact-me-form-first-name-label"
               >First Name</label
