--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           id="digital-cv-contact-section"
           class="digital-cv-section"
         >
-          <form id="contact-me-form" action="/submit" method="POST">
+          <form id="contact-me-form" action="https://sibusiso-mdlovu-digital-cv.netlify.app/submit" method="POST" data-netlify="true">
             <section id="successMessage"></section>
             <label for="firstName" id="contact-me-form-first-name-label"
               >First Name</label
