change section to header

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           class="digital-cv-section"
         >
           <form id="contact-me-form" action="/submit" method="POST" data-netlify="true">
-            <section id="successMessage"></section>
+            <h3 id="successMessage"></h3>
             <label for="firstName" id="contact-me-form-first-name-label"
               >First Name</label
             >
